Fixed it so that the navbar now can be used to jump to homepage or back to registration

--- a/src/resources/Navbar.css
+++ b/src/resources/Navbar.css
@@ -8,6 +8,16 @@
     clip-path: circle();
 }
 
+.Clickable {
+    cursor: pointer;
+}
+
+.logo-picture {
+    width: 75px;
+    height: 75px;
+    clip-path: circle();
+}
+
 .Profile {
     display: flex;
     align-items: center;
@@ -15,3 +25,12 @@
     clip-path: circle();
     border: 10px solid #F8F9F9;
 }
+
+.Logo {
+    display: flex;
+    align-items: center;
+    background-color: #F8F9F9;
+    clip-path: circle();
+    border: 10px solid #F8F9F9;
+}
+
